# Karaka

./: .gitignore  README.rst  compile_trans.sh  create_tables.py  extract_trans.sh  pyproject.toml  runbot.py  runserver.py
Deploy/: karaka.nginx
Deploy/SystemD/: karaka-api.service  karaka-api.socket  karaka-bot.service
alarmbot/: common.py  conf.py  consts.py  dto.py  loghandlers.py  models.py  receptionist.py  serializers.py  settings.toml  validators.py  views.py
locales/vi/LC_MESSAGES/: alarmbot.po
migrations/models/: 0_20241007153029_init.py  1_20241007153321_use-bigint-for-telegram.py
tests/: test_alarmbot.py
