[tool.poetry]
name = "alarmbot"
version = "0.1.0"
description = ""
authors = ["Nguyễn Hồng Quân <ng.hong.quan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
dynaconf = "^2.0"
logbook = "^1.4"
babel = "^2.7"
webargs = "^5.4"
pydantic = "^0.31.1"
aiohttp-basicauth-middleware = "^1.1"
click = "^7.0"
tortoise-orm = "^0.13.5"
aiogram = "^2.20"
asyncpg = "^0.25.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pytest-flake8 = "^1.0.4"
doc8 = "^0.8.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
