[tool.poetry]
name = "alarmbot"
version = "0.1.0"
description = ""
authors = ["Nguyễn Hồng Quân <ng.hong.quan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
dynaconf = "^2.0"
logbook = "^1.4"
babel = "^2.7"
webargs = "^8.1.0"
pydantic = "^1.9.0"
aiohttp-basicauth-middleware = "^1.2.0"
click = "^7.0"
tortoise-orm = "^0.19.0"
aiogram = "^2.20"
asyncpg = "^0.25.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-flake8 = "^1.1.1"
doc8 = "^0.11.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
