[tool.poetry]
name = "alarmbot"
version = "0.2.0"
description = ""
authors = ["Nguyễn Hồng Quân <ng.hong.quan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
dynaconf = "^3.2.5"
logbook = "^1.7.0.post0"
babel = "^2.15.0"
pydantic = "^2.8.2"
aiohttp-basicauth-middleware = "^1.2.0"
click = "^8.1.7"
tortoise-orm = "^0.21.4"
aiogram = "^3.10.0"
asyncpg = "^0.29.0"
aiohttp-pydantic = "^2.2.1"
chameleon-log = "^0.2.0"
systemd-python = {version = "^235", optional = true}

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
ruff = "^0.6.2"
mypy = "^1.11.0"

[tool.poetry.extras]
systemd = ["systemd-python"]

[tool.ruff.format]
quote-style = "single"

[tool.mypy]
plugins = [
  "pydantic.mypy"
]

[[tool.mypy.overrides]]
module = [
  "logbook.*",
  "dynaconf.*",
  "aiohttp_basicauth_middleware.*",
]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

